@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/gcstar/gcstar-1.6.2.ebuild,v 1.1 2011/11/20 06:51:05 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/gcstar/gcstar-1.6.2.ebuild,v 1.2 2012/01/07 12:20:23 ago Exp $
 
 EAPI="4"
 
@@ -12,7 +12,7 @@ SRC_URI="http://download.gna.org/gcstar/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="amd64 ~x86"
 IUSE="cddb gnome mp3 spell stats tellico vorbis"
 
 RDEPEND="dev-lang/perl
