@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/gcstar
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/gcstar/ChangeLog,v 1.1 2011/11/20 06:51:05 tetromino Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/gcstar/ChangeLog,v 1.2 2012/01/07 12:20:23 ago Exp $
+
+  07 Jan 2012; Agostino Sarubbo <ago@gentoo.org> gcstar-1.6.2.ebuild:
+  Stable for AMD64, wrt bug #397727
 
 *gcstar-1.6.2 (20 Nov 2011)
 
